<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.eclipse.ceylon.ide.eclipse</groupId>
  <artifactId>ceylon-ide-eclipse.all</artifactId>
  <version>1.3.4-SNAPSHOT</version>
  <name>Ceylon IDE</name>
  <packaging>pom</packaging>

  <properties>
    <platform-version-name>oxygen</platform-version-name>
    <main-software-site>http://download.eclipse.org/releases/${platform-version-name}</main-software-site>
    <tychoVersion>0.24.0</tychoVersion>
    <scmBranch>trunk</scmBranch>
    <BUILD_ALIAS>Final</BUILD_ALIAS>
    <memoryOptions1>-Xms512m -Xmx1024m -XX:PermSize=256m</memoryOptions1>
    <memoryOptions2>-XX:MaxPermSize=512m</memoryOptions2>
    <systemProperties></systemProperties>
    <maven.compiler.target>1.7</maven.compiler.target>
    <maven.compiler.source>1.7</maven.compiler.source>
  </properties>

  <repositories>

    <repository>
      <id>eclipse</id>
      <layout>p2</layout>
      <url>${main-software-site}</url>
    </repository>

   <repository>
     <id>swtbot</id>
     <layout>p2</layout>
     <url>http://download.eclipse.org/technology/swtbot/releases/2.3.0/</url>
   </repository>

    <repository>
      <id>optionalDeps</id>
      <layout>p2</layout>
      <url>file:site/optionalDependencies/repository</url>
    </repository>

  </repositories>

  <modules>
    <module>plugins</module>
    <module>features</module>
    <module>tests</module>
    <module>site</module>
  </modules>

  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
     <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>1.3.1</version>
        <executions>
          <execution>
            <id>enforce-versions</id>
            <phase>validate</phase>
            <goals>
              <goal>enforce</goal>
            </goals>
            <inherited>true</inherited>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>[3.0.5, 3.5.4]</version>
                </requireMavenVersion>
                <requireJavaVersion>
                  <version>[1.7,1.9)</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
	<groupId>org.eclipse.tycho</groupId>
	<artifactId>tycho-packaging-plugin</artifactId>
	<version>${tychoVersion}</version>
	<configuration>
	  <format>'v'yyyyMMdd-HHmm'-${BUILD_ALIAS}'</format>
	  <archiveSite>true</archiveSite>
	  <environments>
	    <environment>
	      <os>macosx</os>
	      <ws>cocoa</ws>
	      <arch>x86</arch>
	    </environment>
	    <environment>
	      <os>macosx</os>
	      <ws>cocoa</ws>
	      <arch>x86_64</arch>
	    </environment>
	    <environment>
	      <os>win32</os>
	      <ws>win32</ws>
	      <arch>x86</arch>
	    </environment>
	    <environment>
	      <os>win32</os>
	      <ws>win32</ws>
	      <arch>x86_64</arch>
	    </environment>
	    <environment>
	      <os>linux</os>
	      <ws>gtk</ws>
	      <arch>x86</arch>
	    </environment>
	    <environment>
	      <os>linux</os>
	      <ws>gtk</ws>
	      <arch>x86_64</arch>
	    </environment>
	  </environments>
	</configuration>
      </plugin>

      <plugin>
	<groupId>org.eclipse.tycho</groupId>
	<artifactId>tycho-maven-plugin</artifactId>
	<version>${tychoVersion}</version>
	<extensions>true</extensions>
      </plugin>

      <plugin>
	<groupId>org.eclipse.tycho</groupId>
	<artifactId>target-platform-configuration</artifactId>
	<version>${tychoVersion}</version>
	<configuration>
	  <resolver>p2</resolver>
	  <ignoreTychoRepositories>true</ignoreTychoRepositories>
	  <environments>
	    <environment>
	      <os>macosx</os>
	      <ws>cocoa</ws>
	      <arch>x86_64</arch>
	    </environment>
	    <environment>
	      <os>macosx</os>
	      <ws>cocoa</ws>
	      <arch>x86</arch>
	    </environment>
	    <environment>
	      <os>win32</os>
	      <ws>win32</ws>
	      <arch>x86</arch>
	    </environment>
	    <environment>
	      <os>win32</os>
	      <ws>win32</ws>
	      <arch>x86_64</arch>
	    </environment>
	    <environment>
	      <os>linux</os>
	      <ws>gtk</ws>
	      <arch>x86</arch>
	    </environment>
	    <environment>
	      <os>linux</os>
	      <ws>gtk</ws>
	      <arch>x86_64</arch>
	    </environment>
	  </environments>
	</configuration>
      </plugin>

      <plugin>
	<groupId>org.eclipse.tycho</groupId>
	<artifactId>tycho-compiler-plugin</artifactId>
	<version>${tychoVersion}</version>
	<configuration>
	  <encoding>UTF-8</encoding>
	</configuration>
      </plugin>

      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-resources-plugin</artifactId>
	<version>2.6</version>
	<configuration>
	  <encoding>UTF-8</encoding>
	</configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
        <id>update-site-runtime-dependencies</id>
        <activation>
          <property>
            <name>build-against</name>
            <value>last-release</value>
          </property>
        </activation>
        <repositories>
           <repository>
             <id>ceylon-ide-common</id>
             <layout>p2</layout>
             <url>file:../ceylon-ide-common/osgi/dist</url>
           </repository>
            <repository>
             <id>ide-runtime-dependencies</id>
             <layout>p2</layout>
             <url>http://downloads.ceylon-lang.org/ide/eclipse/prod/</url>
           </repository>
        </repositories>
    </profile>
    <profile>
        <id>local-runtime-dependencies</id>
        <activation>
            <activeByDefault>true</activeByDefault>
            <property>
              <name>build-against</name>
              <value>current-master</value>
            </property>
        </activation>
        <repositories>
           <repository>
             <id>ceylon-dist</id>
             <layout>p2</layout>
             <url>file:../ceylon/dist/osgi/build/dist</url>
           </repository>
        
           <repository>
             <id>ceylon-sdk</id>
             <layout>p2</layout>
             <url>file:../ceylon-sdk/osgi/dist</url>
           </repository>
        
           <repository>
             <id>ceylon-formatter</id>
             <layout>p2</layout>
             <url>file:../ceylon.formatter/osgi/dist</url>
           </repository>
        
           <repository>
             <id>ceylon.tool.converter.java2ceylon</id>
             <layout>p2</layout>
             <url>file:../ceylon.tool.converter.java2ceylon/osgi/dist</url>
           </repository>
        
           <repository>
             <id>ceylon-ide-common</id>
             <layout>p2</layout>
             <url>file:../ceylon-ide-common/osgi/dist</url>
           </repository>
        </repositories>
    </profile>
  </profiles>
</project>
